--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,65 @@
+altgraph==0.17
+appdirs==1.4.4
+asgiref==3.2.10
+astroid==2.4.1
+auto-py-to-exe==2.7.5
+beautifulsoup4==4.9.1
+bottle==0.12.18
+bottle-websocket==0.2.9
+bs4==0.0.1
+certifi==2020.6.20
+cffi==1.14.0
+chardet==3.0.4
+colorama==0.4.3
+comtypes==1.1.7
+distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.0.8
-whitenoise==5.2.0
-zipp==1.0.0
+django-cleanup==5.0.0
+django-heroku==0.3.1
+django-widget-tweaks==1.4.8
+djangorestframework==3.11.0
+docutils==0.16
+Eel==0.12.4
+filelock==3.0.12
+future==0.18.2
+gevent==20.6.1
+gevent-websocket==0.10.1
+greenlet==0.4.16
+gunicorn==20.0.4
+html5lib==1.0.1
+idna==2.10
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+mock==4.0.2
+pefile==2019.4.18
+Pillow==7.2.0
+pip-autoremove==0.9.1
+pipenv==2020.6.2
+psycopg2==2.8.5
+pycparser==2.20
+PyInstaller==3.6
+PyJWT==1.7.1
+pylint==2.5.2
+PyPDF2==1.26.0
+pyttsx3==2.88
+pytz==2020.1
+pywin32-ctypes==0.2.0
+requests==2.24.0
+six==1.15.0
+soupsieve==2.0.1
+sqlparse==0.3.1
+toml==0.10.1
+urllib3==1.25.9
+virtualenv==20.0.26
+virtualenv-clone==0.5.4
+webencodings==0.5.1
+websocket==0.2.1
+websocket-client==0.57.0
+websockets==8.1
+whichcraft==0.6.1
+whitenoise==5.1.0
+wrapt==1.12.1
+zope.event==4.4
+zope.interface==5.1.0
